noinst_LTLIBRARIES   = libauth.la

libauth_la_SOURCES   = auth.cpp passwd_auth.cpp

noinst_HEADERS       = auth.h passwd_auth.h \
                       arg.h

libauth_la_CFLAGS   = @DEBUG_CFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ \
-DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
-DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
-DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
-DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ \
-DBTG_REV="@BTG_REV@"

libauth_la_CXXFLAGS = @DEBUG_CXXFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ \
-DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
-DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
-DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
-DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ \
-DBTG_REV="@BTG_REV@"

bin_PROGRAMS = btgpasswd

btgpasswd_SOURCES = arg.cpp btgpasswd.cpp ../dconfig.cpp

btgpasswd_LDADD   = $(top_builddir)/bcore/libbtgcore.la \
                    libauth.la \
                    $(top_builddir)/external/ini/libini.la \
                    @LIBS@ @LIBTORRENT_LIBS@ @BOOST_IOSTREAMS_LIB@ \
                    @LIBGNUTLS_LIBS@ @LIBGNUTLS_LIBS@ @BOOST_PROGRAM_OPTIONS_LIB@ \
                    @BOOST_THREAD_LIB@ @BOOST_FILESYSTEM_LIB@ @BOOST_SYSTEM_LIB@ @LIBCURL@

btgpasswd_CFLAGS   = @CFLAGS@   @DEBUG_CFLAGS@ @LIBGNUTLS_CFLAGS@ \
-DBTG_DEBUG=@BTG_DEBUG@ -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
-DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
-DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
-DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ \
-DBTG_REV="@BTG_REV@"

btgpasswd_CXXFLAGS = @CXXFLAGS@ @DEBUG_CXXFLAGS@ @LIBGNUTLS_CFLAGS@ \
-DBTG_DEBUG=@BTG_DEBUG@ -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
-DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
-DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
-DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ \
-DBTG_REV="@BTG_REV@"

INCLUDES             = @LIBTORRENT_CFLAGS@ -I$(top_srcdir)

man1_MANS          = btgpasswd.man

EXTRA_DIST         = btgpasswd.man
