noinst_LTLIBRARIES   = libipfilter.la

noinst_HEADERS = ipfilterif.h levelone.h emule.h

libipfilter_la_SOURCES = ipfilterif.cpp levelone.cpp emule.cpp
libipfilter_la_CFLAGS  = @CFLAGS@ @DEBUG_CFLAGS@ \
-DBTG_DEBUG=@BTG_DEBUG@ -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
-DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
-DBTG_SVNREV="@BTG_SVNREV@"

libipfilter_la_CXXFLAGS  = @CXXFLAGS@ @DEBUG_CXXFLAGS@ \
-DBTG_DEBUG=@BTG_DEBUG@ -DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
-DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
-DBTG_SVNREV="@BTG_SVNREV@"

INCLUDES = @LIBTORRENT_CFLAGS@ -I$(top_srcdir)

