noinst_LTLIBRARIES   = libupnp.la

if BUILDCYBERLINK
  CYBERLINK_HEADER=cyberlink.h
  CYBERLINK_SOURCE=cyberlink.cpp
endif

noinst_HEADERS = upnpif.h portmap.h $(CYBERLINK_HEADER)

libupnp_la_SOURCES = upnpif.cpp portmap.cpp $(CYBERLINK_SOURCE)

libupnp_la_CFLAGS   = @CFLAGS@ @DEBUG_CFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ \
-DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
-DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
-DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
-DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CFLAGS@ \
-DBTG_REV="@BTG_REV@"

libupnp_la_CXXFLAGS = @CXXFLAGS@ @DEBUG_CXXFLAGS@ -DBTG_DEBUG=@BTG_DEBUG@ \
-DBTG_OPTION_SAVESESSIONS=@BTG_OPTION_SAVESESSIONS@ \
-DBTG_OPTION_EVENTCALLBACK=@BTG_OPTION_EVENTCALLBACK@ \
-DBTG_OPTION_UPNP=@BTG_OPTION_UPNP@ \
-DBTG_OPTION_USECYBERLINK=@BTG_OPTION_USECYBERLINK@ @CYBERLINK_CPPFLAGS@ \
-DBTG_REV="@BTG_REV@"

INCLUDES = -I$(top_srcdir)
